@@ -119,6 +119,7 @@ fully support the editing toolbar, but was found to be too confusing.
 * Skip update of disused 'rc_cur_time' field (todo: discard the field)
 * (bug 3506) Avoid MySQL error when Listusers returns no results
 * (bug 3182) Clear link cache during import to prevent memory leak
+* Add options to dumpBackup.php for making split/partial dumps by page id
 
 
 === Caveats ===
